working without timers

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <button id="start"> click to start</button>
         </div>
         <div id="mainContent" >
+            <div id="counter" class ="trivia">counter </div>
             <h1 id = "question" class="trivia">question </h1>
             <div id="ans0" class="row answer">answer</div>
             <div id="ans1" class="row answer"> answer </div>
