working with timers need some formating

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
         <div id="message" class = "giffy">
             
         </div>
+        <div id="doneZone" class = "giffy">
+            
+        </div>
     </div>
 
 </body>
