fully functional working draft

--- a/index.html
+++ b/index.html
@@ -18,23 +18,26 @@
         <div id="startDiv">
             <button id="start"> click to start</button>
         </div>
-        <div id="mainContent" >
-            <div id="counter" class ="trivia">counter </div>
-            <h1 id = "question" class="trivia">question </h1>
+        <div id="mainContent">
+            <div id="counter" class="trivia">counter </div>
+            <h1 id="question" class="trivia">question </h1>
             <div id="ans0" class="row answer">answer</div>
             <div id="ans1" class="row answer"> answer </div>
             <div id="ans2" class="row answer"> answer</div>
             <div id="ans3" class="row answer"> answer </div>
         </div>
-        <div id="gifDiv" class = "giffy">
+        <div id="gifDiv" class="giffy">
 
         </div>
-        <div id="message" class = "giffy">
-            
+        <div id="message" class="giffy">
+
         </div>
-        <div id="doneZone" class = "giffy">
-            
+        <div id="doneZone" class="giffy">
+
         </div>
+        <button id="restart" class="restart">
+
+        </button>>
     </div>
 
 </body>
