--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
             <button id="start"> click to start</button>
         </div>
         <div id="mainContent">
-            <div id="counter" class="trivia">counter </div>
-            <h1 id="question" class="trivia">question </h1>
-            <div id="ans0" class="row answer">answer</div>
-            <div id="ans1" class="row answer"> answer </div>
-            <div id="ans2" class="row answer"> answer</div>
-            <div id="ans3" class="row answer"> answer </div>
+            <div id="counter" class="trivia"> </div>
+            <h1 id="question" class="trivia"> </h1>
+            <div id="ans0" class="row answer"></div>
+            <div id="ans1" class="row answer">  </div>
+            <div id="ans2" class="row answer"> </div>
+            <div id="ans3" class="row answer">  </div>
         </div>
         <div id="gifDiv" class="giffy">
 
